2010-09-13  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.19

	* build/vs2008/gmime.vcproj: Bumped version.

2010-09-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (g_set_error_literal): glib 2.12
	doesn't have this function, so in order to keep our current glib
	requirements, we need to supply our own version if
	GLIB_MINOR_VERSION < 2.18 (which is when this function was
	introduced).

2010-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (group_to_string): Don't crash if the
	group name is unset. Thanks to Damian Pietras for this patch.

2010-09-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_phrase):
	Implement the same rfc2047-workaround hack as the one found in
	g_mime_utils_header_decode_text().

	* gmime/gmime-encodings.c (g_mime_encoding_base64_decode_step):
	Need to keep state to keep track of the number of ='s we've backed
	out over in case it crosses buffer boundaries.

2010-08-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-param.c (decode_token): Make less strict in order to
	handle unquoted boundary values containing '=' (and other illegal
	characters).

2010-08-27  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.18

	* build/vs2008/gmime.vcproj: Bumped version.

2010-08-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (_internet_address_set_name): Don't
	decode/unquote the name. The docs for all the functions that call
	this assume the name string is in its decoded form already.
	(_internet_address_decode_name): New internal function that
	decodes a string and sets it as the name on the InternetAddress.
	(decode_address): Rewritten to be even more liberal in what it
	accepts.

2010-06-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_decrypt):